methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: type mismatch;
 found   : java.awt.Color
 required: String
def isFacingTrail():Boolean = {var c="" ;avance();c = getCouleurSol();recule(); if (c == Color.green) {return(true);} else {return(false);};
                                                                   ^